--- a/public/files/atualizacao.html
+++ b/public/files/atualizacao.html
@@ -17,6 +17,15 @@
     </style>
 </head>
 <body>
+    <h1>Data: 25/11/2024</h1>
+    <h2>Mobile</h2>
+    <ul>
+        <li>Criado a listagem de usuários responsáveis pelos dados do mobile. Para sincronização dos dados mobile com o sistema Capop, é necessário indicar 
+            um usuário que ficará responsável pela produção enviada pelos servidores da unidade. Esse será o usuário que poderá editar ou excluir esses dados vindos do App Capop.</li>
+        <li>Criada a listagem de arquivos de recebimento de dados do app. A função dessa listagem é permitir ao usuário consultar os dados sincronizados (App -> Sistema) na data escolhida, 
+            podendo localizar algum dado enviado e verificar a sua composição.</li>
+    </ul>
+    <br><hr>
     <h1>Data: 14/11/2024</h1>
     <h2>Materiais Auxiliares</h2>
     <ul>
@@ -38,7 +47,7 @@
             <li>Servidor foi utilizados nas demais fontes de informação -> servidor é marcado como inativo e é informado ao usuário a fonte com dados relacionados.
                 <br>Dessa forma, o servidor não aparece mais nas listas de escolha de servidor em novas atividades, mas as informações onde foi utilizado ficam preservadas;
                 <br>Para excluir definitivamente o servidor, é preciso excluir ou editar os registros onde ele foi utilizado e depois repetir a rotina de exclusão;
-                <br>Quando não houver masi registros associados ao servidor, será seguida a rotina descrita no item 1
+                <br>Quando não houver mais registros associados ao servidor, será seguida a rotina descrita no item 1
             </li>
         </ol>
     </ul>
