--- a/public/files/atualizacao.html
+++ b/public/files/atualizacao.html
@@ -17,6 +17,31 @@
     </style>
 </head>
 <body>
+    <h1>Data: 16/12/2024</h1>
+    <h2>Atividade de Campo</h2>
+    <ul>
+        <li>Corrigido erro na edição de registros, que não fazia a troca de vírgula por ponto no campo valor.</li>
+        <li>Alterada a relação dos campos tipo de despesa/valor, de modo a não salvar registros com valor quando p tipo for nenhum</li>
+        <li>Alterada a opção do Inserir Novo, para pular dias de finais de semana</li>
+    </ul>
+    <h2>Relatórios</h2>
+    <ul>
+        <li>Criado o relatório Valor por Pessoa (Relatórios Gerenciais)</li>
+    </ul>
+    <br><hr>
+    <h1>Data: 03/12/2024</h1>
+    <h2>Relatórios</h2>
+    <ul>
+        <li>Corrigido erro na filtragem de datas quando em combinação com outros filtros.</li>
+        <li>A filtragem de datas permite quatro opções:</li>
+        <ol>
+            <li>Somente data de início: exibirá os registros com datas iguais ou superiores à informada no filtro</li>
+            <li>Somente data de término: exibirá os registros com datas iguais ou inferiores à informada no filtro</li>
+            <li>Intervalo (datas de início e término): exibirá os registros com datas compreendidas entre as informadas nos campos do filtro</li>
+            <li>Mês: exibe os registros do mês informado. Quando preenchido, o sistema ignora possíveis datas de início e término também preenchidas</li>
+        </ol>
+    </ul>
+    <br><hr>
     <h1>Data: 25/11/2024</h1>
     <h2>Mobile</h2>
     <ul>
