feat: uniformes e epis

--- a/public/files/atualizacao.html
+++ b/public/files/atualizacao.html
@@ -17,6 +17,21 @@
     </style>
 </head>
 <body>
+    <h1>Data: 11/02/2025</h1>
+    <h2>Atividade de Campo</h2>
+    <ul>
+        <li>Inserido o filtro de datas na consulta, antes da visualização dos dados. Os filltros da tabela serão aplicados a esse conjunto de dados.</li>
+    </ul>
+    <h2>Usuário</h2>
+    <ul>
+        <li>Criado o nível Convidado, com acesso somente a consultas, sem possibilidade de alteração/inclusão de dados.</li>
+    </ul>
+    <h1>Data: 20/12/2024</h1>
+    <h2>Atividade de Campo</h2>
+    <ul>
+        <li>Corrigido erro de definição de valor quando tipo de pagamento igual a Nenhum.</li>
+    </ul>
+    <br><hr>
     <h1>Data: 16/12/2024</h1>
     <h2>Atividade de Campo</h2>
     <ul>
